# parley

./: .gitignore  .gitlab-ci.yml  AGENTS.md  AUDIT.md  Cargo.toml  README.md  REFACTOR_ROADMAP.md  TODO.md  clippy.toml
.opal/: config.toml
docs/: keybindings.md  mcp.md  overview.md  quickstart.md  review-workflow.md  tui-high-end-roadmap.md
prompts/ai_session/: comment_not_found.md  refactor_task.md  reply_task.md
scripts/: search.sh
src/: docs.rs  error.rs  lib.rs
src/cli/: args.rs  command.rs  mod.rs
src/domain/: ai.rs  config.rs  diff.rs  mod.rs  reference.rs  review.rs
src/git/: diff.rs  history.rs  mod.rs  review_name.rs  root.rs  worktree.rs
src/mcp/: mod.rs  runtime.rs
src/persistence/: store.rs
src/services/: ai_session.rs  mod.rs  review_service.rs
src/services/ai_session/: json_text.rs  progress.rs  prompt.rs  provider.rs  tests.rs
src/services/ai_session/provider/: acp.rs  pi_rpc.rs
src/services/prompts/ai_session/: refactor_task.md  reply_task.md
src/tui/: app.rs  logging.rs  mod.rs  syntax.rs  terminal.rs  theme.rs
src/tui/app/: help_docs.rs  helpers.rs  input.rs  perf_tests.rs  render.rs  state.rs
src/tui/app/input/: code_search.rs  command_actions.rs  command_palette.rs  file_reference.rs  heatmap.rs  help.rs  inline_comment.rs  inline_file_picker.rs  mouse.rs  navigation.rs  normal.rs  pickers.rs  search.rs  threads.rs
src/tui/app/render/: diff.rs  helpers.rs  markdown.rs  mod.rs  modals.rs  overlays.rs  sidebar.rs  status.rs  threads.rs
src/tui/app/state/: ai_session.rs  anchor.rs  core.rs  file_navigation.rs  heatmap.rs  mod.rs  review.rs  settings.rs  tests.rs  text_buffer.rs  thread_management.rs  viewport.rs
src/tui/themes/: ayu_dark.json  catppuccin_dark.json  catppuccin_light.json  default.json  dracula_dark.json  everforest_dark.json  everforest_light.json  github_light.json  gruvbox_dark.json  gruvbox_light.json  gruvbox_material_light.json  kanagawa_dark.json  kanagawa_light.json  material_dark.json  material_light.json  nightfox_dark.json  nightfox_light.json  nord.json  one_dark.json  one_light.json  solarized_dark.json  tokyonight_dark.json  tokyonight_light.json
src/utils/: cast.rs  mod.rs  time.rs
ui-docs/: README.md  package-lock.json  package.json  scripts-build-docs.mjs  wrangler.toml
ui-docs/src/: worker.js
ui-docs/static/: _headers  app.css  docs-app.js  home.js  index.html  robots.txt  site.js  sitemap.xml
ui-docs/static/docs/: index.html  quickstart.html
ui-docs/static/docs/keybindings/: index.html
ui-docs/static/docs/overview/: index.html
ui-docs/static/docs/quickstart/: index.html
ui-docs/static/docs/review-workflow/: index.html
ui-docs/templates/: docs-index.html  index.html
