[package]
name = "parley"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
structopt = "0.3"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "fs", "io-util", "io-std", "process", "time"] }
ratatui = "0.29"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
once_cell = "1.21"
git2 = "0.20"
include_dir = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
time = "0.3"

[dev-dependencies]
tempfile = "3.23"
