[package]
name = "parley-cli"
version = "0.1.0"
edition = "2024"
authors = ["Victor Palade <victor@cloudflavor.io>"]
description = "Terminal-first review tool for AI-generated code changes"
license = "Apache-2.0"
repository = "https://github.com/cloudflavor/parley"
homepage = "https://parley.cloudflavor.io"
documentation = "https://parley.cloudflavor.io"

[lib]
name = "parley"
path = "src/lib.rs"

[[bin]]
name = "parley"
path = "src/bin/parley.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
  "io-std",
  "process",
  "sync",
  "time",
] }
ratatui = "0.30.0"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
syntect = { version = "5.3", default-features = false, features = [
  "default-fancy",
] }
git2 = "0.20"
include_dir = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
time = "0.3"
pulldown-cmark = "0.12"
markdown-to-ansi = { version = "0.2.1", default-features = false }
ansi-to-tui = { version = "8.0.1", default-features = false }

[dev-dependencies]
tempfile = "3.23"
